--- a/Site/Web2/css/estilo.css
+++ b/Site/Web2/css/estilo.css
@@ -1,57 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
 
-#mainNav{
-    width: 100%;
-    position: absolute;
-    z-index: 99;
-    font-size: xx-large;
-}
-
-#mainNav #navbarResponsive .nav-item .btn{
-     border: solid white;
-     background-color: white;  
-     color: black; 
-     font-size: large;
-}
-
-#mainNav #navbarResponsive .nav-item .btn:hover{
-    background-color: #005FF9 !important; 
-    color: white; 
-    border: #005FF9 solid; 
-}
-
-#mainNav ul li a, #mainNav div a{
-    color: white;
-    font-size: x-large;
-}
 
 
 
-#img_1{
-    background-image: url("/image/if_sabara.jpg"); 
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 100%;
-    filter: contrast(110%) saturate(2) opacity(70%) brightness(70%); 
-    height: 50rem;
-    width: 100%;
-}
-#nameproj{
-    font-family: 'Rubik',sans-serif,Arial;
-    font-weight: 700;
-    font-size: x-large;
-}
-
-#text_proj{
-    position: absolute;
-    padding-left: 5rem;
-    padding-top: 20rem;
-    top: 5px;
-    align-items: center;
-    color: white;
-    max-width: 42rem;
-}
 .text{
     font-family: Inter,sans-serif,Arial;
     font-weight: 500;
@@ -70,18 +22,8 @@ h2{
     color: white;
 }
 
-#mid_1{
+#c_white{
     background-color: white;
-}
-
-#mid_1 .btn{
-    background-color: #005FF9;
-    color: white;
-}
-
-#mid_1 .btn:hover{
-    background-color: white;
-    color: #005FF9;
 }
 
 #text_black{
@@ -96,7 +38,7 @@ h2{
     font-weight: 500;
 }
 
-#mid_2{
+#c_blue{
     background-color: #005FF9;
     color: white;
 }
@@ -115,24 +57,7 @@ h2{
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) { 
-    #nameproj{ 
-        font-size: x-large;
-    }
-    
-    #img_1{
-        height: 70vh;
-        width: 100%;
-    }
-
- #mainNav ul li a, #mainNav div a{
-    font-size: large;
-}
-#mainNav #navbarResponsive .nav-item .btn{
-    font-size: small;
-}
-.text{
-    font-size: x-large;
-}
+ 
 
 }
 
