--- a/Site/Web2/css/css_index.css
+++ b/Site/Web2/css/css_index.css
@@ -1,45 +1,46 @@
-#mainNav{
+#mainNav {
     width: 100%;
     position: absolute;
     z-index: 99;
     font-size: xx-large;
 }
 
-#mainNav #navbarResponsive .nav-item .btn{
-     border: solid white;
-     background-color: white;  
-     color: black; 
-     font-size: large;
+#mainNav #navbarResponsive .nav-item .btn {
+    border: solid white;
+    background-color: white;
+    color: black;
+    font-size: large;
 }
 
-#mainNav #navbarResponsive .nav-item .btn:hover{
-    background-color: #005FF9 !important; 
-    color: white; 
-    border: #005FF9 solid; 
+#mainNav #navbarResponsive .nav-item a:hover {
+    /* background-color: #005FF9 !important; */
+    /* color: white; */
+    border-bottom: #005FF9 solid;
 }
 
-#mainNav ul li a, #mainNav div a{
+#mainNav ul li a,
+#mainNav div a {
     color: white;
     font-size: x-large;
 }
 
-#img_1{
-    background-image: url("/image/if_sabara.jpg"); 
+#img_1 {
+    background-image: url("/image/if_sabara.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 100%;
-    filter: contrast(110%) saturate(2) opacity(70%) brightness(70%); 
+    filter: contrast(110%) saturate(2) opacity(70%) brightness(70%);
     height: 50rem;
     width: 100%;
 }
 
-#nameproj{
-    font-family: 'Rubik',sans-serif,Arial;
+#nameproj {
+    font-family: 'Rubik', sans-serif, Arial;
     font-weight: 700;
     font-size: x-large;
 }
 
-#text_proj{
+#text_proj {
     position: absolute;
     padding-left: 5rem;
     padding-top: 20rem;
@@ -49,16 +50,23 @@
     max-width: 42rem;
 }
 
-#c_white .btn{
+#c_white .btn {
     background-color: #005FF9;
     color: white;
 }
 
-#c_white .btn:hover{
+#c_white .btn:hover {
     background-color: white;
     color: #005FF9;
 }
 
+#text_black {
+    font-size: large;
+}
+
+#text_white {
+    font-size: large;
+}
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {}
@@ -67,34 +75,33 @@
 @media (min-width: 576px) and (max-width: 767.98px) {}
 
 /* // Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px) { 
-   
- }
+@media (min-width: 768px) and (max-width: 991.98px) {}
 
 /* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199.98px) { 
-    #nameproj{ 
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    #nameproj {
         font-size: x-large;
     }
-    
-    #img_1{
+
+    #img_1 {
         height: 70vh;
         width: 100%;
     }
 
- #mainNav ul li a, #mainNav div a{
-    font-size: large;
-}
-#mainNav #navbarResponsive .nav-item .btn{
-    font-size: small;
-}
-.text{
-    font-size: x-large;
-}
+    #mainNav ul li a,
+    #mainNav div a {
+        font-size: large;
+    }
+
+    #mainNav #navbarResponsive .nav-item .btn {
+        font-size: small;
+    }
+
+    .text {
+        font-size: x-large;
+    }
 
 }
 
- /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-   
-}
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
