--- a/Site/Web2/css/css_index.css
+++ b/Site/Web2/css/css_index.css
@@ -29,7 +29,7 @@
 
 #mainNav #navbarResponsive .nav-item a:hover::after {
     width: 100%;
-    //transition: width .3s;
+    transition: width .3s;
 }
 
 
