--- a/Site/Web2/css/css_index.css
+++ b/Site/Web2/css/css_index.css
@@ -12,12 +12,6 @@
     font-size: large;
 }
 
-/* #mainNav #navbarResponsive .nav-item a:hover {
-     background-color: #005FF9 !important;
-     color: white; 
-    border-bottom: #005FF9 solid;
-}*/
-
 #mainNav #navbarResponsive .nav-item a:after {
     content: '';
     display: block;
@@ -90,7 +84,9 @@
 @media (min-width: 576px) and (max-width: 767.98px) {}
 
 /* // Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px) {}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    
+}
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
