--- a/Site/Web2/css/estiloCadastro.css
+++ b/Site/Web2/css/estiloCadastro.css
@@ -28,7 +28,7 @@ body{
     color: #005FF9 !important;
 }
 
-#criar.btn{
+/* #criar.btn{
     background-color: white;
     color: #005FF9;
     border-radius: 100px;
@@ -39,7 +39,7 @@ body{
     background-color: #E6E6FA ;
     color: #005FF9;
     
-}
+} */
 
 .indiciplina{
     height: auto
