Criando index_aluno

--- a/Site/Web2/css/estiloCadastro.css
+++ b/Site/Web2/css/estiloCadastro.css
@@ -28,6 +28,9 @@ body{
     color: #005FF9 !important;
 }
 
+svg{
+    color: #005FF9;
+}
 /* #criar.btn{
     background-color: white;
     color: #005FF9;
