--- a/Site/Web2/css/estiloIndexAluno.css
+++ b/Site/Web2/css/estiloIndexAluno.css
@@ -1,5 +1,9 @@
 .dropdown-menu {
-    padding-top: 50px;
+    background-color: #2e3340;
+    margin: 0px -3px;
+    padding: 0px;
+    -webkit-box-shadow: inset 0px 2px 3px 0px rgba(0,0,0,0.4);
+    box-shadow: inset 0px 2px 3px 0px rgba(0,0,0,0.4);
 }
 
 h1{
