--- a/Site/Web2/css/estilo.css
+++ b/Site/Web2/css/estilo.css
@@ -87,6 +87,10 @@ p, label, input,small{
     transition: width .3s;
 }
 
+#rodape{
+    
+}
+
 
 /* #subNav ul li a, #subNav div a{
    color: #005FF9;
