--- a/Site/Web2/css/estiloFeedbackAluno.css
+++ b/Site/Web2/css/estiloFeedbackAluno.css
@@ -2,10 +2,44 @@ h1{
     text-align: center;
 }
 
-#titulo{
-    padding: 1rem;
+.boxText{
+    
 }
 
-#feedback{
-    padding: 2rem;
+.indiciplina{
+    height: auto
+}
+
+/* //Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+    .indiciplina{
+        height: 83vh;
+    }
+}
+
+/* //Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .indiciplina{
+        height: 83vh;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .indiciplina{
+    height: 83vh;
+}}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .indiciplina{
+        height: 83vh;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .indiciplina{
+        height: 83vh;
+    }
 }
