--- a/Site/Web2/css/estiloIndexAluno.css
+++ b/Site/Web2/css/estiloIndexAluno.css
@@ -20,7 +20,25 @@ h1 {
     background-color: unset !important;
 }
 
+p{
+    font-size: 3vh;
+}
 
+h1 {
+    font-size: 5vh !important;
+}
+#clica{
+    width: 5vh;
+    height: 5vh;
+}
+#sai svg{
+    height: 5vh;
+    width: 4vh;
+}
+#sair svg{
+    height: 5vh;
+    width: 4vh;
+}
 
 
 /* //Extra small devices (portrait phones, less than 576px) */
@@ -30,20 +48,45 @@ h1 {
     }
 
     .indiciplina {
-        height: 75vh;
+        height: 85vh;
         padding-top: 10vh;
     }
+    #sai{
+        display: none;
+    }
+    #sair svg{
+        height: 3vh;
+        width: 3vh;
+    }
+    .navbar button{
+        font-size: 2vh;
+    }
+    
 }
 
-/* //Small devices (landscape phones, 576px and up) */
+/* //Small devices (landscape phones, 576px and up) //AQUI*/
 @media (min-width: 576px) and (max-width: 767.98px) {
     #rodape {
         bottom: unset;
+        margin-top: none;
     }
 
     .indiciplina {
-        height: 85vh;
+        height: 75vh;
         padding-top: 5vh;
+        background-color: yellow !important;
+    }
+    #sai{
+        display: none;
+    }
+    #sair svg{
+        height: 6vh;
+        width: 8vh;
+    }
+
+    #clica{
+        width: 6vh;
+        height: 8vh;
     }
     
 }
@@ -54,7 +97,7 @@ h1 {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     .indiciplina {
-        height: 85vh;
+        height: 73vh;
         padding-top: 10vh;
     }
 
@@ -62,17 +105,11 @@ h1 {
         bottom: unset;
     }
 
-    #sair svg {
-        width: 5vh;
-        height: 5vh;
-    }
+   
     #sai{
         display: none;
     }
-    #clica{
-        width: 5vh;
-        height: 5vh;
-    }
+    
 
 
 }
@@ -80,7 +117,7 @@ h1 {
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
     .indiciplina {
-        height: 86vh;
+        height: 80vh;
         padding-top: 10vh;
     }
 
@@ -90,23 +127,23 @@ h1 {
     #sair{
         display: none;
     }
+    
 
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px) {
     .indiciplina {
-        height: 83vh;
+        height: 82vh;
         padding-top: 8vh;
     }
-
-    h1 {
-        font-size: 5vh !important;
+    
+    #subNav svg{
+        height: 4vh !important;
     }
     #sair{
         display: none;
     }
-
 
 }
 
@@ -116,11 +153,13 @@ h1 {
         padding-top: 10vh;
     }
 
-    h1 {
-        font-size: 5vh !important;
-    }
     #sair{
         display: none;
     }
-
+    #subNav a{
+        padding-right: 5rem;
+    }
+    
+   
+    
 }
