--- a/Site/Web2/css/estilo.css
+++ b/Site/Web2/css/estilo.css
@@ -111,7 +111,9 @@ p, label, input,small{
 } */
 
 /* //Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {}
+@media (max-width: 575.98px) {
+
+}
 
 /* //Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {}
@@ -120,6 +122,10 @@ p, label, input,small{
 @media (min-width: 768px) and (max-width: 991.98px) { 
     footer #nameproj {
         font-size: large;
+    }
+    #subNav svg{
+        width: 3vh;
+        height: 3vh;
     }
  }
 
