--- a/Site/Web2/css/estiloIndexAdm.css
+++ b/Site/Web2/css/estiloIndexAdm.css
@@ -20,7 +20,7 @@ h1 {
     width:30% ;
     height: 30% ;
     background-color: white;
-    border-radius: 10%;
+    border-radius: 4px;
     color: black;
 }
 
