--- a/Site/Web2/css/estiloRankingAluno.css
+++ b/Site/Web2/css/estiloRankingAluno.css
@@ -27,6 +27,11 @@ p{
 h1 {
     font-size: 5vh !important;
 }
+
+h2 {
+    font-size: 3vh !important;
+}
+
 #clica{
     width: 5vh;
     height: 5vh;
@@ -38,6 +43,20 @@ h1 {
 #sair svg{
     height: 5vh;
     width: 4vh;
+}
+
+tr,th {
+    color: white;
+    font-family: Inter,sans-serif,Arial;
+}
+tbody tr:hover{
+    color: #005FF9 !important;
+    background-color: white !important;
+}
+
+#tipoLixo{
+    border-width: 0.7vh !important;
+    
 }
 
 
