--- a/Site/Web2/css/estiloRankingAluno.css
+++ b/Site/Web2/css/estiloRankingAluno.css
@@ -55,9 +55,39 @@ tbody tr:hover{
 }
 
 #tipoLixo{
-    border-width: 0.7vh !important;
+    border-width: 0.7vh !important; 
+}
+
+.text_col {
+    text-align: center !important;
+}
+
+#text_white {
+    width:40vh ;
+    height: 20vh ;
+    background-color: white;
+    border-radius: 4px;
+    color: black;
+}
+
+#card1{
+    background-color: #FFFFCC;
+    height: 15vh !important;
+    border-radius: 50%;
+}
+
+#trp{
+    margin-left: 5.5vh;
+    margin-top: 6vh;
+    color: gold;
+}
+#ran p{
+    font-size: 3vh !important;
+}
+h2{
     
 }
+
 
 
 /* //Extra small devices (portrait phones, less than 576px) */
